<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/heart_icon"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/GoodMorning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/UI_margin_start"
        android:layout_marginTop="@dimen/UI_margin_top"
        android:fontFamily="@font/montserrat"
        android:text="@string/good_morning"
        android:textColor="@color/title_color"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/heart_icon"
        android:layout_width="@dimen/heart_icon_size"
        android:layout_height="@dimen/heart_icon_size"
        android:layout_marginStart="@dimen/figma_margin_start_heart_icon"
        android:layout_marginTop="@dimen/heart_icon_margin_top"
        android:contentDescription="@string/heart_icon"
        app:layout_constraintStart_toEndOf="@+id/GoodMorning"
        app:layout_constraintTop_toTopOf="@+id/GoodMorning"
        app:srcCompat="@drawable/hearts" />

    <RelativeLayout
        android:layout_width="@dimen/design_notification_dimension"
        android:layout_height="@dimen/design_notification_dimension"
        android:background="@drawable/white_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/GoodMorning"
        android:layout_marginEnd="@dimen/design_notification_margin_end">

        <ImageView
            android:id="@+id/notification"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/notification"
            android:contentDescription="@string/notification_icon"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/notification_number"
            android:layout_width="@dimen/notification_badge_dimension"
            android:layout_height="@dimen/notification_badge_dimension"
            android:layout_marginTop="@dimen/notification_margin"
            android:layout_marginEnd="@dimen/notification_margin"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/num1"
            android:contentDescription="@string/notification_number"
            android:scaleType="centerCrop" />

    </RelativeLayout>

    <EditText
        android:id="@+id/searchbar"
        android:layout_width="@dimen/searchbar_final_width"
        android:layout_height="@dimen/searchbar_height"
        android:layout_marginTop="@dimen/design_searchbar_margin_top"
        android:background="@color/searchbar_bg"
        android:drawableEnd="@drawable/baseline_search_24"
        android:fontFamily="@font/montserrat"
        android:hint="@string/searchbar_hint"
        android:importantForAutofill="no"
        android:includeFontPadding="true"
        android:inputType="textPersonName"
        android:labelFor="@id/searchbar"
        android:paddingStart="@dimen/search_hint_padding"
        android:paddingEnd="@dimen/search_icon_padding"
        android:text="@string/searchbar_text"
        android:textColor="@color/searchbar_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GoodMorning"
        tools:ignore="LabelFor" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/NestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/scroll_weight"
        android:layout_marginTop="@dimen/design_scrollview_margin_top"
        android:contentDescription="@string/nested_scroll_view"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rel_display"
            android:layout_width="match_parent"
            android:layout_height="@dimen/constraint_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchbar">

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_card"
                android:layout_width="@dimen/design_profile_img_width"
                android:layout_height="@dimen/card_layout_height"
                android:layout_margin="@dimen/design_profile_margin"
                android:layout_marginStart="@dimen/design_profile_img_margin_start"
                android:layout_marginEnd="@dimen/design_profile_img_margin_end"
                android:background="@color/cardview_light_background"
                android:elevation="@dimen/profile_card_elevation"
                app:cardCornerRadius="@dimen/design_profile_img_radius"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/rel_display">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/card_display"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/card_layout_height"
                    android:background="@drawable/heroimg">

                    <ImageView
                        android:id="@+id/editIcon"
                        android:layout_width="@dimen/design_edit_dimension"
                        android:layout_height="@dimen/design_edit_dimension"
                        android:layout_marginTop="@dimen/edit_icon_margin_top"
                        android:layout_marginEnd="@dimen/edit_icon_margin_end"
                        android:contentDescription="@string/edit_icon"
                        app:layout_constraintEnd_toEndOf="@id/card_display"
                        app:layout_constraintTop_toTopOf="@id/card_display"
                        app:srcCompat="@drawable/edit_pen_icon" />

                    <ImageView
                        android:id="@+id/editIcon2"
                        android:layout_width="@dimen/design_edit_dimension"
                        android:layout_height="@dimen/design_edit_underline_height"
                        android:layout_marginEnd="@dimen/edit_icon_margin_end"
                        android:contentDescription="@string/edit_icon"
                        app:layout_constraintEnd_toEndOf="@id/card_display"
                        app:layout_constraintTop_toBottomOf="@id/editIcon"
                        app:srcCompat="@drawable/underline_icon" />

                    <ImageView
                        android:id="@+id/display"
                        android:layout_width="@dimen/display_width"
                        android:layout_height="@dimen/display_height"
                        android:layout_marginStart="@dimen/hero_text_design_margin_start"
                        android:layout_marginTop="@dimen/hero_text_margin_top"
                        android:backgroundTint="@android:color/darker_gray"
                        android:gravity="center_horizontal"
                        app:layout_constraintStart_toStartOf="@id/card_display"
                        app:layout_constraintTop_toTopOf="@id/card_display"
                        app:srcCompat="@drawable/yayy"/>

                    <ImageView
                        android:id="@+id/confetti"
                        android:layout_width="@dimen/confetti_width"
                        android:layout_height="@dimen/confetti_height"
                        android:layout_marginStart="@dimen/confetti_margin_start"
                        android:contentDescription="@string/confetti"
                        app:layout_constraintStart_toEndOf="@id/display"
                        app:layout_constraintTop_toTopOf="@id/display"
                        app:srcCompat="@drawable/confetti" />

                    <ImageView
                        android:id="@+id/display_message"
                        android:layout_width="@dimen/display_message_width"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/display_margin_top"
                        android:layout_marginEnd="@dimen/display_message_margin_end"
                        android:backgroundTint="@android:color/darker_gray"
                        android:gravity="center"
                        app:layout_constraintEnd_toEndOf="@id/card_display"
                        app:layout_constraintTop_toBottomOf="@id/display"
                        app:srcCompat="@drawable/display_message"/>

                    <ImageView
                        android:id="@+id/message_icon"
                        android:layout_width="@dimen/profile_icon_dimension"
                        android:layout_height="@dimen/profile_icon_dimension"
                        android:layout_marginStart="@dimen/profile_icon_margin_start"
                        android:layout_marginTop="@dimen/profile_icon_margin_top"
                        android:background="@drawable/white_circle"
                        android:contentDescription="@string/message_icon"
                        android:padding="@dimen/profile_icon_padding"
                        android:scaleType="centerInside"
                        app:layout_constraintStart_toEndOf="@id/phone"
                        app:layout_constraintTop_toBottomOf="@id/display_message"
                        app:srcCompat="@drawable/secured_letter" />

                    <ImageView
                        android:id="@+id/phone"
                        android:layout_width="@dimen/profile_icon_dimension"
                        android:layout_height="@dimen/profile_icon_dimension"
                        android:layout_marginStart="@dimen/msg_icon_margin_start"
                        android:layout_marginTop="@dimen/icon_margin_top"
                        android:contentDescription="@string/phone_icon"
                        app:layout_constraintStart_toStartOf="@id/card_display"
                        app:layout_constraintTop_toBottomOf="@+id/display_message"
                        app:srcCompat="@drawable/telephone"
                        android:background="@drawable/white_circle"
                        android:scaleType="centerInside"
                        android:padding="@dimen/profile_icon_padding"/>

                    <ImageView
                        android:id="@+id/share_icon"
                        android:layout_width="@dimen/profile_icon_dimension"
                        android:layout_height="@dimen/profile_icon_dimension"
                        android:layout_marginTop="@dimen/icon_margin_top"
                        android:layout_marginEnd="@dimen/profile_icon_margin_end"
                        android:contentDescription="@string/share_icon"
                        app:layout_constraintEnd_toEndOf="@id/card_display"
                        app:layout_constraintTop_toBottomOf="@id/display_message"
                        app:srcCompat="@drawable/share_icon_black"
                        android:background="@drawable/white_circle"
                        android:scaleType="centerInside"
                        android:padding="@dimen/profile_icon_padding"/>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/upcoming_birthdays"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/upcoming_birthday_height"
                android:layout_marginStart="@dimen/design_UI_margin_start"
                android:layout_marginTop="@dimen/upcoming_birthday_margin_top"
                android:layout_marginBottom="@dimen/upcoming_birthday_margin_bottom"
                app:srcCompat="@drawable/upcoming_birthdays"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_card" />


            <ImageView
                android:id="@+id/celebrant_profile"
                android:layout_width="@dimen/celebrant_profile_dimension"
                android:layout_height="@dimen/celebrant_profile_dimension"
                android:layout_marginStart="@dimen/celebrant_profile_margin_start"
                android:layout_marginTop="@dimen/celebrant_profile_margin_top"
                android:layout_marginBottom="@dimen/celebrant_margin_bottom"
                android:contentDescription="@string/celebrant_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upcoming_birthdays"
                app:srcCompat="@drawable/newcel" />

            <androidx.cardview.widget.CardView
                android:id="@+id/celebrant_card"
                android:layout_height="@dimen/celebrant_card_height"
                android:layout_width="@dimen/celebrant_card_width"
                android:layout_marginStart="@dimen/celebrant_card_margin_start"
                app:layout_constraintStart_toEndOf="@id/celebrant_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/celebrant_profile">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/celebrant_card_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/celebrant_card_height" >

                <ImageView
                    android:id="@+id/Celebrant1"
                    android:layout_width="@dimen/celebrant_image_width"
                    android:layout_height="@dimen/celebrant_image_height"
                    android:layout_marginStart="@dimen/celebrant1_margin_start"
                    android:layout_marginTop="@dimen/celebrant_image_margin_top"
                    app:srcCompat="@drawable/profile_name"
                    app:layout_constraintStart_toStartOf="@id/celebrant_card_layout"
                    app:layout_constraintTop_toTopOf="@id/celebrant_card_layout" />

                <ImageView
                    android:id="@+id/cake_image"
                    android:layout_width="@dimen/celebrant_card_icon_dimension"
                    android:layout_height="@dimen/celebrant_card_icon_dimension"
                    android:layout_marginStart="@dimen/celebrant1_margin_start"
                    android:layout_marginTop="@dimen/celebrant_card_icon_margin_top"
                    app:layout_constraintStart_toStartOf="@id/celebrant_card_layout"
                    app:layout_constraintTop_toBottomOf="@id/Celebrant1"
                    app:srcCompat="@drawable/cake"
                    android:contentDescription="@string/celebrant_cake_icon" />
                    
                    <ImageView
                        android:id="@+id/cake_day"
                        android:layout_width="@dimen/birthday_width"
                        android:layout_height="@dimen/birthday_height"
                        android:layout_marginStart="@dimen/birthday_margin_start"
                        app:layout_constraintStart_toEndOf="@id/cake_image"
                        app:layout_constraintTop_toTopOf="@id/cake_image"
                        app:srcCompat="@drawable/date" />

                    <ImageView
                        android:id="@+id/calender_image"
                        android:layout_width="@dimen/celebrant_card_icon_dimension"
                        android:layout_height="@dimen/celebrant_card_icon_dimension"
                        android:layout_marginStart="@dimen/celebrant1_margin_start"
                        android:layout_marginTop="@dimen/celebrant_card_icon_margin_top"
                        app:layout_constraintStart_toStartOf="@id/celebrant_card_layout"
                        app:layout_constraintTop_toBottomOf="@id/cake_image"
                        android:layout_marginBottom="@dimen/celebrant_card_icon_margin_bottom"
                        app:srcCompat="@drawable/calender_icon"/>

                    <ImageView
                        android:id="@+id/calender_day"
                        android:layout_width="@dimen/celebrant_card_icon_dimension"
                        android:layout_height="@dimen/celebrant_card_icon_dimension"
                        android:layout_marginStart="@dimen/birthday_margin_start"
                        android:layout_marginBottom="@dimen/celebrant_card_icon_margin_bottom"
                        app:layout_constraintStart_toEndOf="@id/calender_image"
                        app:layout_constraintTop_toTopOf="@id/calender_image"
                        app:srcCompat="@drawable/_0" />

                    <ImageView
                        android:id="@+id/calender_days_left"
                        android:layout_width="@dimen/calender_days_width"
                        android:layout_height="@dimen/calender_days_height"
                        android:layout_marginStart="@dimen/calender_days_margin_start"
                        android:layout_marginBottom="@dimen/celebrant_card_icon_margin_bottom"
                        app:layout_constraintStart_toEndOf="@id/calender_day"
                        app:layout_constraintTop_toTopOf="@id/calender_image"
                        app:srcCompat="@drawable/days_left" />

                    <ImageView
                        android:layout_width="@dimen/celebrant_card_outline_icon_width"
                        android:layout_height="@dimen/celebrant_card_outline_icon_height"
                        android:layout_margin="@dimen/outline_margin"
                        android:background="@color/celebrant_card_icon_color"
                        app:layout_constraintBottom_toBottomOf="@id/celebrant_card_layout"
                        app:layout_constraintEnd_toEndOf="@id/celebrant_card_layout"
                        app:layout_constraintTop_toTopOf="@id/celebrant_card_layout"
                        app:srcCompat="@drawable/sidebar"
                        tools:ignore="ImageContrastCheck" />



                    
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>